CAL-1358 fix z-index of drawer

--- a/calendar-webapp/src/main/webapp/vue-app/css/ExoEventForm.less
+++ b/calendar-webapp/src/main/webapp/vue-app/css/ExoEventForm.less
@@ -7,6 +7,7 @@
   overflow: hidden;
   transition: 0.3s;
   background: #fff;
+  z-index: 999;
 }
 
 .drawer.open {
